loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:1: error: Unit does not take parameters
for (i<-1 to 16;j<-1 to 8){avance(){gauche()}} 
                                   ^