loopfor.LoopCourse.scala.code
for (i<-1 to 16;j<-1 to 8){avance(){gauche()}}